typescript/checker/tests/conformance/parser/ecmascript6/Iterators/parserForOfStatement2.ts.stderr
error: TS1123
 --> $DIR/tests/conformance/parser/ecmascript6/Iterators/parserForOfStatement2.ts:2:9
  |
2 | for (var of X) {
  |         ^

